Fix alignment in Today

--- a/src/styles/_today.css
+++ b/src/styles/_today.css
@@ -8,6 +8,9 @@
     color: var(--s-color-on-background);
     padding: 0;
   }
+  hgroup {
+    padding: 0 var(--p-space-xs-m);
+  }
 }
 
 #today-heading {
